--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -50,4 +50,5 @@
     <string name="operation_finished">操作完成!!</string>
     <string name="seeta_detect">Seeta人脸</string>
     <string name="seeta_points">Seeta关键点</string>
+    <string name="pic_motion">图片局部流动</string>
 </resources>
